[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/godot-name-generator-master/name-generator.gd" type="Script" id=1]
[ext_resource path="res://Scenes/NpcManager.gd" type="Script" id=2]

[node name="NpcManager" type="Node"]
script = ExtResource( 2 )
max_name_length = 8

[node name="NameGenerator" type="Node" parent="."]
script = ExtResource( 1 )

[node name="TpRequestTimer" type="Timer" parent="."]
autostart = true

[node name="ShoutTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="TpRequestTimer" to="." method="_on_TpRequestTimer_timeout"]
[connection signal="timeout" from="ShoutTimer" to="." method="_on_ShoutTimer_timeout"]
